--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -1,13 +1,13 @@
 # Translation of glibc debconf templates to German
-# Copyright (C) Helge Kreutzmann <debian@helgefjell.de>, 2006-2009, 2011, 2016.
+# Copyright (C) Helge Kreutzmann <debian@helgefjell.de>, 2006-2009, 2011, 2016, 2017.
 # This file is distributed under the same license as the glibc package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: glibc 2.21-9\n"
+"Project-Id-Version: glibc 2.24-17\n"
 "Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2017-08-26 13:35+0200\n"
-"PO-Revision-Date: 2016-02-21 19:48+0100\n"
+"POT-Creation-Date: 2017-06-13 22:11+0200\n"
+"PO-Revision-Date: 2017-09-30 10:35+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "Language: German\n"
@@ -269,11 +269,6 @@ msgstr "Kernelversion wird nicht unterstützt"
 #. Type: note
 #. Description
 #: ../debhelper.in/libc.templates:7001
-#, fuzzy
-#| msgid ""
-#| "This version of the GNU libc requires kernel version ${kernel_ver} or "
-#| "later.  Older versions might work but are not officially supported.  "
-#| "Please consider upgrading your kernel."
 msgid ""
 "This version of the GNU libc requires kernel version ${kernel_ver} or "
 "later.  Older versions might work but are not officially supported by "
@@ -281,4 +276,4 @@ msgid ""
 msgstr ""
 "Diese Version der GNU-Libc benötigt Kernel Version ${kernel_ver} oder neuer. "
 "Ältere Versionen können funktionieren, werden aber nicht offiziell "
-"unterstützt. Bitte prüfen Sie ein Upgrade Ihres Kernels."
+"durch Debian unterstützt. Bitte prüfen Sie ein Upgrade Ihres Kernels."
