--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2007
 # This file is distributed under the same license as the glibc package.
 # Ricardo Silva <ardoric@gmail.com>, 2007.
-# Pedro Ribeiro <p.m42.ribeiro@gmail.com>, 2010, 2012
+# Pedro Ribeiro <p.m42.ribeiro@gmail.com>, 2010, 2012, 2017
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: glibc\n"
+"Project-Id-Version: glibc 2.24-17\n"
 "Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
-"POT-Creation-Date: 2017-08-26 13:35+0200\n"
-"PO-Revision-Date: 2012-05-28 22:55+0100\n"
+"POT-Creation-Date: 2017-06-13 22:11+0200\n"
+"PO-Revision-Date: 2017-09-07 10:25+0100\n"
 "Last-Translator: Pedro Ribeiro <p.m42.ribeiro@gmail.com>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "Language: pt\n"
@@ -36,8 +36,8 @@ msgid ""
 "Locales are a framework to switch between multiple languages and allow users "
 "to use their language, country, characters, collation order, etc."
 msgstr ""
-"Locales é uma framework para alternar entre várias línguas e permitir aos "
-"utilizadores utilizarem a sua língua, país, caracteres, etc."
+"Locales é uma framework para alternar entre vários idiomas e permitir aos "
+"utilizadores utilizarem o seu idioma, país, caracteres, etc."
 
 #. Type: multiselect
 #. Description
@@ -49,8 +49,8 @@ msgid ""
 msgstr ""
 "Por favor escolha quais os locales a gerar. Os locales UTF-8 devem ser "
 "seleccionados, especialmente em instalações de raiz. Outros conjuntos de "
-"caracteres podem ser úteis para compatibilidade com sistemas e software "
-"antigo."
+"caracteres podem ser úteis para compatibilidade com software e sistemas "
+"mais antigos."
 
 #. Type: select
 #. Choices
@@ -62,7 +62,7 @@ msgstr "Nenhum"
 #. Description
 #: ../debhelper.in/locales.templates:2002
 msgid "Default locale for the system environment:"
-msgstr "Locale predefinido o ambiente do sistema:"
+msgstr "Locale predefinido para o sistema:"
 
 #. Type: select
 #. Description
@@ -72,9 +72,8 @@ msgid ""
 "for the user. You can choose a default locale for the system from the "
 "generated locales."
 msgstr ""
-"Muitos pacotes em Debian usam locales para mostrar texto na língua correcta "
-"do utilizador. Pode escolher, de entre os locales gerados, o locale "
-"predefinido do sistema."
+"Muitos pacotes em Debian usam locales para mostrar texto no idioma correcto "
+"do utilizador. Dos locales gerados, pode escolher o padrão do sistema."
 
 #. Type: select
 #. Description
@@ -84,8 +83,8 @@ msgid ""
 "is a multi-user system where not all users are able to speak the default "
 "language, they will experience difficulties."
 msgstr ""
-"Isto irá escolher a língua padrão para todo o sistema. Se este é um sistema "
-"multi-utilizador em que nem todos os utilizadores são capazes de a falar, "
+"Isto irá escolher o idioma padrão para todo o sistema. Se este é um sistema "
+"multi-utilizador em que nem todos os utilizadores são capazes de o falar "
 "estes irão ter dificuldades."
 
 #. Type: boolean
@@ -132,13 +131,13 @@ msgid ""
 "No to the question below."
 msgstr ""
 "Se quer interromper a actualização agora e continuar mais tarde, por favor "
-"responda Não à questão abaixo."
+"responda \"Não\" à questão seguinte."
 
 #. Type: string
 #. Description
 #: ../debhelper.in/libc.templates:2001
 msgid "Services to restart for GNU libc library upgrade:"
-msgstr "Serviços a reiniciar para a actualização da biblioteca libc da GNU:"
+msgstr "Serviços a reiniciar para a actualização da biblioteca GNU libc:"
 
 #. Type: string
 #. Description
@@ -169,7 +168,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:3001
 msgid "Failure restarting some services for GNU libc upgrade"
-msgstr "Falha ao reiniciar alguns serviços para a actualização da libc da GNU"
+msgstr "Falha ao reiniciar alguns serviços para a actualização da GNU libc"
 
 #. Type: error
 #. Description
@@ -179,7 +178,7 @@ msgid ""
 "upgrade:"
 msgstr ""
 "Os seguintes serviços não puderam ser reiniciados para a actualização da "
-"biblioteca libc da GNU:"
+"biblioteca GNU libc:"
 
 #. Type: error
 #. Description
@@ -244,7 +243,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:6001
 msgid "Kernel must be upgraded"
-msgstr ""
+msgstr "O kernel necessita de ser actualizado"
 
 #. Type: error
 #. Description
@@ -253,12 +252,14 @@ msgid ""
 "This version of the GNU libc requires kernel version ${kernel_ver} or "
 "later.  Please upgrade your kernel before installing glibc."
 msgstr ""
+"Esta versão da GNU libc necessita da versão ${kernel_ver} ou mais recente. "
+"Por favor, actualize o kernel antes de instalar a glibc."
 
 #. Type: note
 #. Description
 #: ../debhelper.in/libc.templates:7001
 msgid "Kernel version not supported"
-msgstr ""
+msgstr "Versão não suportada do kernel"
 
 #. Type: note
 #. Description
@@ -268,3 +269,6 @@ msgid ""
 "later.  Older versions might work but are not officially supported by "
 "Debian.  Please consider upgrading your kernel."
 msgstr ""
+"Esta versão da GNU libc requer a versão ${kernel_ver} ou mais recente. "
+"Versões mais antigas podem funcionar mas não são oficialmente suportadas "
+"pela Debian. Por favor, considere actualizar o kernel."
