--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,39 @@
+glibc (2.25-0experimental4) experimental; urgency=medium
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/git-bits-sysmacros.h.diff: New patch.
+  * patches/hurd-i386/git-stack_chk_fail_local.diff: New patch.
+  * patches/hurd-i386/git-stack-protect-static.diff: New patch.
+  * patches/hurd-i386/cvs-libpthread.diff: Update, fixes rt/tst-aio and
+    rt/tst-aio64 sync ordering.
+  * sysdeps/hurd.mk: Enable stack-protector on the Hurd.
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix TLS relocations against local symbols on powerpc, sparc and
+      sparc64.  Closes: #874074.
+  * Replace debian/patches/mips/submitted-syscalls5-7-unbound-stack.diff
+    by the final version git/submitted-syscalls5-7-unbound-stack.diff.
+  * debian/rules.d/debhelper.mk: do not install gdb python hooks for stage 1.
+    Closes: #874491.
+  * Update Portuguese debconf translation, by Pedro Ribeiro.
+    Closes: #874610.
+  * Update German debconf translation, by Helge Kreutzman.  Closes: #877291.
+  * debian/sysdeps/ppc64el.mk: disable lock elision.  Closes:# 878071.
+  * debian/script.in/nohwcap.sh: fix alpha ev67 optimized package name.
+    Closes: #881147.
+  * debian/debhelper.in/libc.postinst, script.in/nsscheck.sh: check for
+    postgresql in NSS check.  Closes: #710275.
+  * debian/sysdeps/{alpha,hurd-i386,i386}.mk: do not build optimized libraries
+    libc6.1-alphaev67, libc6-xen and libc0.3-xen during stage 1 and stage 2.
+    Closes: #881455, #881636.
+  * debian/rules, debian/sysdeps/*.mk: skip the multilib pass for the nobiarch
+    profile (in addition to skipping the package creation).
+  * debian/rules: only build -dev multilib packages in stage1.  Closes:
+    #881454, #881646.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 14 Nov 2017 23:38:04 +0100
+
 glibc (2.25-0experimental3) experimental; urgency=medium
 
   [ Aurelien Jarno ]
@@ -145,6 +181,21 @@ glibc (2.25-0experimental0) experimental; urgency=medium
     GCC 6 (fixed in GCC 7) and not a regression from 2.24.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 02 Aug 2017 18:54:56 +0200
+
+glibc (2.24-18) UNRELEASED; urgency=medium
+
+  [ Samuel Thibault ]
+  * libc0.3.symbols.hurd-i386: Update with proc_set/get_exe RPCs.
+  * patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: Always define SA_SIGINFO.
+  * patches/hurd-i386/local-no_unsupported_ioctls.diff: New patch.
+  * patches/hurd-i386/local-clock_gettime_MONOTONIC.diff: Complete with
+    clock_getres().
+
+  [ Svante Signell ]
+  * patches/hurd-i386/submitted-exec_filename.diff: Update, fixes
+    execve/spawni relative path case.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 26 Aug 2017 11:11:58 +0200
 
 glibc (2.24-17) unstable; urgency=medium
 
