--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,39 @@
+glibc (2.24-11+deb9u2) stretch; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/control.in/x32: Add a gcc-multilib Recommends for libc6-dev-x32.
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - debian/patches/any/submitted-perl-inc.diff: drop, merged upstream.
+    - debian/patches/any/cvs-remove-pid-tid-cache-clone.diff: drop, merged
+      upstream.
+    - debian/patches/any/local-CVE-2017-1000366-rtld-LD_LIBRARY_PATH.diff:
+      drop, merged upstream.
+    - debian/patches/any/local-CVE-2017-1000366-rtld-LD_PRELOAD.diff: drop,
+      merged upstream.
+    - debian/patches/any/local-CVE-2017-1000366-rtld-LD_AUDIT.diff: drop,
+      merged upstream.
+    - debian/patches/any/cvs-vectorized-strcspn-guards.diff: drop, merged
+      upstream.
+    - debian/patches/any/cvs-hwcap-AT_SECURE.diff: drop, merged upstream.
+    - Avoid use-after-free read access in clntudp_call (CVE-2017-12133).
+      Closes: #870648.
+    - Fix compatibility with Intel C++ __regcall calling convention.  Closes:
+      #881850.
+    - Fix a buffer overrun in rpcgen.
+    - Fix strlen on null pointer in nss_nisplus.
+    - Fix invalid cast in group merging affecting ppc64 and s390x.
+    - Define collation for Malayalam chillu characters.
+    - Correct collation of U+0D36 and U+0D37 Malayalam characters.
+  * debian/script.in/nohwcap.sh: always check for all optimized packages
+    as multiarch allows one to install foreign architectures.  Closes:
+    #882272.
+
+  [ Santiago Vila ]
+  * debian/debhelper.in/libc-bin.postinst: do not update /etc/nsswitch.conf
+    when its content already matches the default.  Closes: #865144.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Fri, 01 Dec 2017 21:09:18 +0100
+
 glibc (2.24-11+deb9u1) stretch-security; urgency=medium
 
   * debian/patches/any/local-CVE-2017-1000366-rtld-LD_AUDIT.diff,
