--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+glibc (2.26-0experimental3) experimental; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/patches/any/local-ldso-disable-hwcap.diff: Include <fcntl.h>
+    before <not-errno.h>.
+  * debian/rules, debian/rules.d/build.mk: stop logging build/check messages
+    to files, both sbuild and debuild are able to do that.
+  * debian/rules, debian/rules.d/build.mk: allow TIMEOUTFACTOR to be override
+    per architecture.
+  * debian/sysdeps/hppa.mk: set TIMEOUTFACTOR to 100 on HPPA.
+  * debian/testsuite-xfail-debian.mk: remove tst-create-detached from XFAIL
+    on HPPA.
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix tst-realloc when heap space is exhausted.
+  * debian/testsuite-xfail-debian.mk: convert alpha math XFAILs into granular
+    XFAILs.
+  * debian/testsuite-xfail-debian.mk: remove tst-realloc from XFAIL on
+    sparc64.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 01 Jan 2018 13:50:41 +0100
+
 glibc (2.26-0experimental2) experimental; urgency=medium
 
   [ Aurelien Jarno ]
@@ -162,6 +183,27 @@ glibc (2.26-0experimental0) experimental; urgency=medium
     mips64el.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 19 Nov 2017 12:49:13 +0100
+
+glibc (2.25-6) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/control.in/main: add mips r6 architectures to Build-Depends:
+    g++-6-multilib.  Closes: #884774.
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fixes incorrect RPATH/RUNPATH handling for SUID binaries
+      (CVE-2017-16997).  Closes: #884615.
+  * debian/control.in/main, debian/copyright, rules.d/tarball.mk: prefer
+    https for upstream links.
+  * debian/control.in/main: bump Standards-Version to 4.1.3.
+  * debian/patches/alpha/submitted-rlimit.diff: new patch to fix getrlimit
+    and setrlimit with RLIM_INFINITY on alpha.
+  * debian/patches/alpha/submitted-fminmax.diff: new patch to fix fmin and
+    fmax on alpha.
+  * debian/testsuite-xfail-debian.mk: mark test-fexcept, test-ldouble and
+    test-ldouble-finite as XFAIL as the failures are due to new tests, and
+    thus not a regression.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 31 Dec 2017 18:50:30 +0100
 
 glibc (2.25-5) unstable; urgency=medium
 
