--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+glibc (2.26-2) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/unsubmitted-mount_namespace.diff: Rename to
+    git-mount_namespace.diff.
+
+  [ Helmut Grohne ]
+  * debian/rules.d/build.mk: Remove a left-over closing brace, breaking
+    stage 1.  Closes: #886301.
+
+  [ Aurelien Jarno ]
+  * debian/sysdeps/hppa.mk: increase TIMEOUTFACTOR to 600 on HPPA.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Fri, 05 Jan 2018 19:09:39 +0100
+
 glibc (2.26-1) unstable; urgency=medium
 
   [ Samuel Thibault ]
