--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,120 @@
+2018-01-08  Florian Weimer  <fweimer@redhat.com>
+
+	resolv: Support binary labels in test framework.
+	* support/resolv_test.c (struct to_be_freed): Remove.
+	(struct compressed_name): New.
+	(allocate_compressed_name, ascii_tolower)
+	(compare_compressed_name): New functions.
+	(struct resolv_response_builder): Update type of
+	compression_offsets for use with tsearch.  Rempve to_be_freed.
+	(response_push_pointer_to_free): Remove function.
+	(resolv_response_add_name): Rewrite using struct compressed_name
+	and tsearch instead of hsearch_r.
+	(response_builder_allocate): Remove initialization of
+	compression_offsets.
+	(response_builder_free): Update for removal of to_be_freed.  Use
+	tdestroy instead of hdestroy_r.
+	* resolv/Makefile (tests): Add tst-resolv-binary.
+	(tst-resolv-binary): Link with -lresolv -lpthread.
+
+2018-01-08  Florian Weimer  <fweimer@redhat.com>
+
+	* support/check.h (TEST_COMPARE): Allow sign mismatch at compile
+	time.  Pass positive flag instead of negative flag to
+	support_test_compare_failure.
+	(support_test_compare_failure): Change negative parameter to
+	positive.
+	* support/support_test_compare_failure.c (report)
+	(support_test_compare_failure): Likewise.
+	* support/tst-test_compare.c (return_ssize_t, return_int): New.
+	(do_test): Check int/size_t, ssize_t/size_t comparisons.
+
+2018-01-08  Szabolcs Nagy  <szabolcs.nagy@arm.com>
+
+	[BZ #22637]
+	* nptl/descr.h (stackblock, stackblock_size): Update comments.
+	* nptl/allocatestack.c (allocate_stack): Add guardsize to stacksize.
+	* nptl/nptl-init.c (__pthread_get_minstack): Remove guardsize from
+	stacksize.
+	* nptl/pthread_getattr_np.c (pthread_getattr_np): Likewise.
+
+2018-01-08  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* sysdeps/x86_64/fpu/multiarch/Makefile (libm-sysdep_routines):
+	Add s_sincosf-sse2 and s_sincosf-fma.
+	(CFLAGS-s_sincosf-fma.c): New.
+	* sysdeps/x86_64/fpu/multiarch/s_sincosf-fma.c: New file.
+	* sysdeps/x86_64/fpu/multiarch/s_sincosf-sse2.S: Likewise.
+	* sysdeps/x86_64/fpu/multiarch/s_sincosf.c: Likewise.
+	* sysdeps/x86_64/fpu/s_sincosf.S: Don't add alias if
+	__sincosf is defined.
+
+2018-01-08  Florian Weimer  <fweimer@redhat.com>
+
+	* nptl/tst-thread-exit-clobber.cc: New file.
+	* nptl/Makefile (CFLAGS-tst-thread-exit-clobber.o): Compile in
+	C++11 mode.
+	(LDLIBS-tst-thread-exit-clobber): Link with libstdc++.
+	(tests): Add tst-thread-exit-clobber.
+	[!CXX] (tests-unsupported): Add tst-thread-exit-clobber.
+
+2018-01-08  Florian Weimer  <fweimer@redhat.com>
+
+	* support/check.h (support_static_assert): Define.
+	(TEST_COMPARE): Use it.
+
+2018-01-07  Aurelien Jarno  <aurelien@aurel32.net>
+
+	* sysdeps/unix/sysv/linux/getrlimit64 (getrlimit64)
+	[!__RLIM_T_MATCHES_RLIM64_T]
+	[!SHLIB_COMPAT (libc, GLIBC_2_1, GLIBC_2_2)]: Define as weak alias of
+	__getrlimit64. Add libc_hidden_weak.
+
+2018-01-06  Palmer Dabbelt  <palmer@sifive.com>
+
+	* elf/elf.h (R_RISCV_NONE): New define.
+	(R_RISCV_32): Likewise.
+	(R_RISCV_64): Likewise.
+	(R_RISCV_RELATIVE): Likewise.
+	(R_RISCV_COPY): Likewise.
+	(R_RISCV_JUMP_SLOT): Likewise.
+	(R_RISCV_TLS_DTPMOD32): Likewise.
+	(R_RISCV_TLS_DTPMOD64): Likewise.
+	(R_RISCV_TLS_DTPREL32): Likewise.
+	(R_RISCV_TLS_DTPREL64): Likewise.
+	(R_RISCV_TLS_TPREL32): Likewise.
+	(R_RISCV_TLS_TPREL64): Likewise.
+	* Makerules (make-link-multidir): Make directories before linking into
+	them.
+	* sysdeps/unix/sysv/linux/dl-vdso.h (VDSO_NAME_LINUX_4_15): New
+	define.
+	(VDSO_HASH_LINUX_4_15): Likewise.
+	* scripts/build-many-glibcs.py (class Glibc): Strip shared objects
+	in subdirectories of lib.
+	* nptl/Makefile (/librt.so): Always depend on
+	"$(shared-thread-library)".
+
+2018-01-06  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* sysdeps/mach/hurd/i386/jmp_buf-macros.h: New file.
+	* sysdeps/i386/dl-tlsdesc.S (_dl_tlsdesc_dynamic) [NO_RTLD_HIDDEN]: Call
+	JUMPTARGET (___tls_get_addr) instead of HIDDEN_JUMPTARGET
+	(___tls_get_addr).
+	* sysdeps/x86_64/dl-tlsdesc.S (_dl_tlsdesc_dynamic): Likewise.
+	* sysdeps/i386/fpu/libm-test-ulps: Regenerated for GCC 7 with
+	"-O2 -march=i686".
+	* posix/tst-glob_symlinks.c [!PATH_MAX]: Define PATH_MAX macro.
+	* sysdeps/gnu/glob64.c (__glob): Define macro instead of glob macro.
+	(__glob64): Define GLIBC_2_27 versioned symbol instead of glob64.
+	* sysdeps/gnu/glob-lstat-compat.c: New file.
+	* sysdeps/gnu/glob64-lstat-compat.c: New file.
+	* sysdeps/posix/pwritev_common.c: Add PROT_READ to __mmap prot.
+
+2018-01-05  Tulio Magno Quites Machado Filho  <tuliom@linux.vnet.ibm.com>
+
+	* sysdeps/powerpc/powerpc64/dl-machine.c (_dl_reloc_overflow):
+	Reserve 16 chars to reloc_addr before calling _itoa_word.
+
 2018-01-05  Aurelien Jarno  <aurelien@aurel32.net>
 
 	[BZ #22678]
