--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+glibc (2.26-4) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/testsuite-xfail-debian.mk: since we now also run the testsuite for
+    the multilib flavours, simplify the mips* entries into mips*, mips be and
+    mips le, instead of trying to keep all the flavours in sync. Remove
+    XFAILs for tests that have been fixed.
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix a buffer underflow in getcwd() (CVE-2018-1000001).  Closes:
+      #887001.
+  * debian/control.in/*: add conflicts to only allow one to install one set
+    of multilib packages simultaneously.  Closes: #702962, #743618, #784015,
+    #820826, #870257.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 14 Jan 2018 11:24:48 +0100
+
 glibc (2.26-3) unstable; urgency=medium
 
   [ Aurelien Jarno ]
