--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+glibc (2.27-1) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/sysdeps/*.mk: install gnu/lib-names-*.h for multilib builds.
+  * debian/patches/alpha/submitted-makecontext.diff: new patch to fix
+    infinite backtrace within a context created by makecontext.
+  * debian/patches/sparc/submitted-sparc32-makecontext.diff: new patch
+    to fix infinite backtrace within a context created by makecontext.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 03 Mar 2018 11:47:56 +0100
+
 glibc (2.27-0experimental1) experimental; urgency=medium
 
   [ Samuel Thibault ]
