--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,25 @@
+glibc (2.27-6) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/tg-socket_flags.diff: Rename to git-socket_flags.diff.
+  * patches/hurd-i386/tg-socketpair_flags.diff: Rename to
+    git-socketpair_flags.diff.
+  * patches/hurd-i386/tg-pipe2.diff: Rename to git-pipe2.diff.
+  * patches/hurd-i386/tg-posix_thread.diff: Rename to git-posix_thread.diff.
+  * patches/hurd-i386/tg-pthread_deps.diff: Rename to git-pthread_deps.diff.
+  * patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: Fix standardization of
+    exposition of sigaction
+  * patches/kfreebsd/local-tst-unique.diff: Fix patch application.
+  * patches/hurd-i386/unsubmitted-getaux_at_secure.diff: Fix
+    getauxval(AT_SECURE).
+  * patches/hppa/git-check-execstack.diff: Ignore executable stacks.
+    Closes: #904056.
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch.
+
+ -- Samuel Thibault <sthibault@debian.org>  Tue, 04 Sep 2018 21:13:02 +0200
+
 glibc (2.27-5) unstable; urgency=medium
 
   [ Aurelien Jarno ]
