--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+glibc (2.27-7) unstable; urgency=medium
+
+  * patches/hurd-i386/local-no_unsupported_ioctls.diff: Undefine useless bit
+    macros too.
+  * patches/hurd-i386/git-interrupt_timeout{,_EIO}.diff: Fix double-writes in
+    ghc.
+  * patches/hurd-i386/git-intr-msg.diff: Fix crashes due to a race between
+    calling RPC and handling a signal.
+
+ -- Samuel Thibault <sthibault@debian.org>  Sun, 28 Oct 2018 10:46:23 +0100
+
 glibc (2.27-6) unstable; urgency=medium
 
   [ Samuel Thibault ]
