--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+glibc (2.27-8) unstable; urgency=medium
+
+  * patches/hurd-i386/git-intr-msg.diff: Fix a cancellation case.
+  * patches/hurd-i386/git-interrupt_timeout_EIO.diff: return EIEIO instead of
+    EIO.
+
+ -- Samuel Thibault <sthibault@debian.org>  Mon, 29 Oct 2018 21:36:01 +0100
+
 glibc (2.27-7) unstable; urgency=medium
 
   * patches/hurd-i386/local-no_unsupported_ioctls.diff: Undefine useless bit
