--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,26 @@
+glibc (2.28-0experimental1) experimental; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/control.in/main: Update Vcs-Git to point to the 2.28 branch.
+  * debian/testsuite-xfail-debian.mk: Allow nptl/tst-signal6 to fail on armhf.
+    The failure is due to a kernel bug when building armhf on an ARM64
+    machine.
+  * debian/testsuite-xfail-debian.mk: Allow math/test-ildouble-fma and
+    math/test-ldouble-fma to fail on powerpc, ppc64, ppc64el. This is a known
+    bug and not a regression.
+  * debian/testsuite-xfail-debian.mk: remove fixed XFAILs.
+  * debian/testsuite-xfail-debian.mk: update XFAILs for the mips* Octeon 3 FPU
+    bug with the new tests.
+  * debian/patches/git-updates.diff: update from upstream stable branch.
+  * debian/control.in/main, debian/sysdeps/armel.mk: build with gcc-7 as
+    gcc-8 triggers issues in the testsuite.
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/git-tst-preadvwritev2-common.c.diff: Backport fix for
+    build failure.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 12 Nov 2018 21:54:56 +0100
+
 glibc (2.28-0experimental0) experimental; urgency=medium
 
   [ Aurelien Jarno ]
@@ -111,6 +134,19 @@ glibc (2.28-0experimental0) experimental; urgency=medium
   * debian/patches/localedata/tailor-iso14651_t1.diff: Build without errors.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 30 Oct 2018 00:11:37 +0100
+
+glibc (2.27-9) UNRELEASED; urgency=medium
+
+  * debian/control: Bump hurd-dev dependency to >= 1:0.9.git20181030-1 to get
+    pci.defs.
+  * hurd-i386/git-pci.diff: Enable pci RPCs.
+  * patches/hurd-i386/git-msync.diff: Support msync.
+  * debian/control: Bump gnumach-dev build-dep accordingly.
+  * libc0.3.symbols.hurd-i386: Update symbols accordingly.
+  * patches/hurd-i386/git-spawn-open.diff: Fix crash on spawn with open
+    operation.
+
+ -- Samuel Thibault <sthibault@debian.org>  Sat, 03 Nov 2018 22:50:40 +0100
 
 glibc (2.27-8) unstable; urgency=medium
 
