--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,30 @@
+glibc (2.28-2) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/git-fcntl64.diff: Fix returning value returned by
+    __f_setlk.
+
+  [ Aurelien Jarno ]
+  * debian/control.in/libc: breaks r-cran-later (<< 0.7.5+dfsg-2), ie
+    versions built with tinycthread.  Closes: #915339.
+  * debian/patches/git-updates.diff: update from upstream stable branch.
+  * debian/testsuite-xfail-debian.mk: allow tst-pkey to fail on ppc64el, ppc64
+    powerpc and powerpcspe as the glibc implementation is still only partial.
+    Closes: #914997.
+  * debian/control.in/main: glibc-source: add breaks on cross-toolchain-base
+    (<< 29~) and cross-toolchain-base-ports (<< 25~) as those packages are not
+    compatible with glibc 2.28.  Closes: #915621.
+  * debian/testsuite-xfail-debian.mk: whitelist misc/tst-preadvwritev2 and
+    misc/tst-preadvwritev64v2 on x32. The failing part of those tests is new,
+    and the it looks like a kernel bug in the compat layer.
+  * debian/testsuite-xfail-debian.mk: whitelist elf/tst-execstack-needed on
+    riscv64, it is similar to the already whitelisted test
+    elf/test-xfail-tst-execstack.
+  * debian/debhelper.in/locales.postinst: fix regexp checking for installed
+    locales package.  Closes: #903964.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 05 Dec 2018 19:50:21 +0100
+
 glibc (2.28-1) unstable; urgency=medium
 
   [ Samuel Thibault ]
