--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,36 @@
+glibc (2.28-4) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/testsuite-xfail-debian.mk: whitelist math/test-fenv on riscv64.
+    This failure is also due to a kernel bug.
+  * debian/sysdeps/riscv64.mk: increase TIMEOUTFACTOR to 100 on riscv64.
+  * debian/local/manpages/*: remove manpages that are not installed in the
+    binary packages.
+  * debian/local/manpages/po/de.po: update German manpages translations, by
+    Helge Kreutzmann. Closes: #877434.
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - debian/patches/any/submitted-sigaction-sa-restorer.diff: upstreamed.
+  * debian/testsuite-xfail-debian.mk: whitelist tests that sometimes fail in
+    a riscv64 QEMU VM, but not on a HiFive Unleashed board.
+  * debian/patches/submitted-gcc-8-kernel-assisted-atomics.diff: fix kernel
+    assisted atomics on armel with GCC 8.
+  * debian/control.in/main, debian/sysdeps/armel.mk: build with GCC 8 on
+    armel.
+  * debian/patches/any/submitted-workaround-math-errno-gcc-bug.diff:
+    workaround GCC bug BZ #88576 / Debian #917115 by not using -fmath-errno
+    outside of libm.  Closes: #916779.
+  * debian/patches/riscv64/git-thread-debugging.diff: fix thread debugging
+    in gdb on riscv64.
+
+  [ Samuel Thibault ]
+  * debian/testsuite-xfail-debian.mk: whitelist failing new tests on hurd.
+  * debian/patches/hurd-i386/git-fcntl64.diff: Fix 64bit implementation.
+  * debian/patches/hurd-i386/tg-context_functions.diff: Update from topgit.
+  * debian/patches/hurd-i386/tg-sysvshm.diff: Update from topgit.
+  * debian/patches/hurd-i386/tg-magic-pid.diff: rename to git-magic-pid.diff.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 29 Dec 2018 11:04:27 +0100
+
 glibc (2.28-3) unstable; urgency=medium
 
   [ John David Anglin ]
