--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,30 @@
+glibc (2.28-6) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/patches/hurd-i386/git-AT_EMPTY_PATH.diff: New patch, fixes qt's
+    file size query.
+  * debian/patches/hurd-i386/git-altstack.diff: New patch, fixes altstack
+    initial state.
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix a buffer overflow in string/memory functions on x32 (CVE-2019-6488).
+    - Reject IP addresses with trailing characters (CVE-2016-10739).  Closes:
+      #920047.
+    - Fix wrong return value for memcmp on amd64 and x32 due to mishandling
+      of most significant bit (CVE-2019-7309).
+  * Update Russian debconf translation, by Lev Lamberov.  Closes:
+    #921165.
+  * debian/patches/any/local-ldso-disable-hwcap.diff: only check for
+    /etc/ld.so.nohwcap on alpha, hurd-i386 and i386. Based on a patch from
+    Josh Triplett.  Closes: #908928.
+  * debian/patches/any/git-libio-stdout-putc.diff: fix puts and putchar output
+    with change stdout pointer.  Closes: #761300.
+  * debhelper.in/locales.bug-presubj: drop obsolete file, the dependency
+    mechanism for locales has been changes a lot of time ago.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Feb 2019 19:55:42 +0100
+
 glibc (2.28-5) unstable; urgency=medium
 
   [ Aurelien Jarno ]
