--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -6,20 +6,21 @@
 # Yuri Kozlov <kozlov.y@gmail.com>, 2006.
 # Sergey Alyoshin <alyoshin.s@gmail.com>, 2007, 2008.
 # Yuri Kozlov <yuray@komyakino.ru>, 2009, 2011.
+# Lev Lamberov <dogsleg@debian.org>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: eglibc 2.13-23\n"
 "Report-Msgid-Bugs-To: glibc@packages.debian.org\n"
 "POT-Creation-Date: 2017-08-26 13:35+0200\n"
-"PO-Revision-Date: 2011-12-17 09:26+0400\n"
-"Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
+"PO-Revision-Date: 2019-01-30 19:31+0500\n"
+"Last-Translator: Lev Lamberov <dogsleg@debian.org>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.0\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"X-Generator: Poedit 2.2.1\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: multiselect
@@ -41,9 +42,9 @@ msgid ""
 "Locales are a framework to switch between multiple languages and allow users "
 "to use their language, country, characters, collation order, etc."
 msgstr ""
-"Локаль -- это инфраструктура для поддержки в системе нескольких языков; она "
+"Локаль — это инфраструктура для поддержки в системе нескольких языков; она "
 "позволяет пользователю настроить язык сообщений, страну, алфавит, порядок "
-"сортировки и т.п."
+"сортировки и т. п."
 
 #. Type: multiselect
 #. Description
@@ -54,8 +55,8 @@ msgid ""
 "useful for backwards compatibility with older systems and software."
 msgstr ""
 "Выберите создаваемые локали. Кодировка локали UTF-8 должна быть выбрана по "
-"умолчанию, особенно при новой инсталляции. Другие кодировки локали могут "
-"быть полезны для обратной совместимости со старыми системами и программами."
+"умолчанию, особенно при новой установке. Другие кодировки локали могут быть "
+"полезны для обратной совместимости со старыми системами и программами."
 
 #. Type: select
 #. Choices
@@ -111,13 +112,13 @@ msgid ""
 "yourself is xdm - because automatic restart might disconnect your active X11 "
 "sessions."
 msgstr ""
-"Запущенные службы и программы, которые используют NSS, должны быть "
-"перезапущены, иначе они не будут способны выполнять поиск или "
-"аутентификацию. В процессе установки возможно перезапустить некоторые службы "
-"(такие, как ssh или telnetd), но другие программы не могут быть "
-"автоматически перезапущены. Одна из таких программ, которая требует ручной "
-"остановки и перезапуска после обновления glibc, это xdm, так как её "
-"автоматический перезапуск может отключить ваши активные сессии X11."
+"Запущенные службы и программы, использующие NSS, должны быть перезапущены, "
+"иначе они не будут способны выполнять поиск или аутентификацию. В процессе "
+"установки возможно перезапустить некоторые службы (такие как ssh или "
+"telnetd), но другие программы не могут быть автоматически перезапущены. "
+"Одной из таких программ, требующих ручной остановки и перезапуска после "
+"обновления glibc, является xdm, так как её автоматический перезапуск может "
+"отключить ваши активные сессии X11."
 
 #. Type: boolean
 #. Description
@@ -155,11 +156,11 @@ msgid ""
 "review the following space-separated list of init.d scripts for services to "
 "be restarted now, and correct it if needed."
 msgstr ""
-"Запущенные службы и программы, которые используют NSS, должны быть "
-"перезапущены, иначе они не будут способны выполнять поиск или аутентификацию "
-"(для таких служб, как ssh, это может повлиять на возможность входа в "
-"систему). Просмотрите следующий разделённый пробелами список из скриптов "
-"init.d для служб, которые будут сейчас перезапущены и отредактируйте его при "
+"Запущенные службы и программы, использующие NSS, должны быть перезапущены, "
+"иначе они не будут способны выполнять поиск или аутентификацию (для таких "
+"служб как ssh, это может повлиять на возможность входа в систему). "
+"Просмотрите следующий разделённый пробелами список из сценариев init.d для "
+"служб, которые будут сейчас перезапущены, и отредактируйте его при "
 "необходимости."
 
 #. Type: string
@@ -194,8 +195,8 @@ msgid ""
 "You will need to start these manually by running 'invoke-rc.d <service> "
 "start'."
 msgstr ""
-"Вам будет нужно запустить их вручную, для чего следует выполнить '/etc/init."
-"d/<служба> start'."
+"Вам будет нужно запустить их вручную, для чего следует выполнить 'invoke-rc."
+"d <service> start'."
 
 #. Type: error
 #. Description
@@ -215,9 +216,9 @@ msgid ""
 "their current sessions."
 msgstr ""
 "В системе обнаружен один или несколько экземпляров xscreensaver или "
-"xlockmore. Так данное обновление устанавливает несовместимую с прошлой "
+"xlockmore. Так как данное обновление устанавливает несовместимую с прошлой "
 "версией библиотеку GNU libc, эти программы не смогут проводить "
-"аутентификацию. Перед тем как продолжить данное обновление вам нужно "
+"аутентификацию. Перед тем как продолжить данное обновление, вам нужно "
 "перезапустить или остановить эти программы, чтобы избежать блокировки "
 "имеющихся сеансов пользователей."
 
@@ -225,7 +226,7 @@ msgstr ""
 #. Description
 #: ../debhelper.in/libc.templates:5001
 msgid "Restart services during package upgrades without asking?"
-msgstr "Перезапускать службы при обновлении пакета не задавая вопрос?"
+msgstr "Перезапускать службы при обновлении пакета без подтверждения?"
 
 #. Type: boolean
 #. Description
@@ -241,16 +242,16 @@ msgid ""
 msgstr ""
 "В системе установлены службы, которые требуют перезапуска после обновления "
 "определённых библиотек (например, libpam, libc и libssl). Так как это может "
-"вызвать перерыв в работе службы, обычно, при каждом обновлении выдаётся "
-"список служб, которые нужно перезапустить. Чтобы этот вопрос не задавался, "
-"вы можете ответить утвердительно; в этом случае все необходимые службы будут "
-"перезапущены автоматически."
+"вызвать перерыв в работе службы, то обычно при каждом обновлении "
+"запрашивается подтверждение списка служб, которые нужно перезапустить. Чтобы "
+"этот вопрос не задавался, вы можете ответить утвердительно; в этом случае "
+"все необходимые службы будут перезапущены автоматически."
 
 #. Type: error
 #. Description
 #: ../debhelper.in/libc.templates:6001
 msgid "Kernel must be upgraded"
-msgstr ""
+msgstr "Следует обновить ядро"
 
 #. Type: error
 #. Description
@@ -259,12 +260,14 @@ msgid ""
 "This version of the GNU libc requires kernel version ${kernel_ver} or "
 "later.  Please upgrade your kernel before installing glibc."
 msgstr ""
+"Для данной версии GNU libc требуется ядро версии ${kernel_ver} или новее. "
+"Обновите ядро до выполнения установки glibc."
 
 #. Type: note
 #. Description
 #: ../debhelper.in/libc.templates:7001
 msgid "Kernel version not supported"
-msgstr ""
+msgstr "Версия ядра не поддерживается"
 
 #. Type: note
 #. Description
@@ -274,3 +277,6 @@ msgid ""
 "later.  Older versions might work but are not officially supported by "
 "Debian.  Please consider upgrading your kernel."
 msgstr ""
+"Для данной версии GNU libc требуется ядро версии ${kernel_ver} или новее. "
+"Более старые версии могут работать, но они официально не поддерживаются в "
+"Debian. Рассмотрите возможность обновления ядра."
