--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+glibc (2.28-7) unstable; urgency=medium
+
+  * debian/patches/hurd-i386/local-no-bootstrap-fs-access.diff: Refresh.
+
+ -- Samuel Thibault <sthibault@debian.org>  Sat, 09 Feb 2019 18:34:27 +0100
+
 glibc (2.28-6) unstable; urgency=medium
 
   [ Samuel Thibault ]
