--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+glibc (2.29-0ubuntu2) disco; urgency=medium
+
+  * debian/patches/git-updates.diff: Update from upstream stable branch,
+    including "S390: Mark vx and vxe as important hwcap" (LP: #1821200)
+  * debian/testsuite-xfail-debian.mk: XFAIL new tst-nss-test3 for disco.
+  * debian/debhelper.in/libc.postinst: Only restart services once each.
+  * debian/patches/arm/unsubmitted-ldso-abi-check.diff: Fix rtld segv in
+    dl_open() introduced via merge with upstream at 2.28 (LP: #1821677)
+  * debian/testsuite-xfail-debian.mk: XFAIL new tst-support_descriptors.
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Sun, 07 Apr 2019 14:12:24 -0600
+
 glibc (2.29-0ubuntu1) disco; urgency=medium
 
   * Merge with current 2.29 from Debian experimental git, remaining changes:
