--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+glibc (2.29-0experimental1) experimental; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/patches/hurd-i386/submitted-net.diff: rebase.
+  * debian/patches/hurd-i386/local-fix-nss.diff: rebase.
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix math tests on hppa.
+  * debian/testsuite-xfail-debian.mk: XFAIL two new tests on HPPA that are
+    due to a bug in the testsuite, reported upstream.
+  * debian/sysdeps/sparc64.mk: disable PIE on sparc64 as it produces broken
+    binaries, causing issues in the testsuite.
+  * debian/sysdeps/alpha.mk, debian/control.in/main: build with gcc-8 on alpha
+    as gcc-9 introduces math errors in the testsuite.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 21 Aug 2019 11:13:51 +0200
+
 glibc (2.29-0experimental0) experimental; urgency=medium
 
   [ Adam Conrad ]
